crates/lang/tests/ui/storage_item/fail/collections_only_atomic_2.rs
use ink_prelude::collections::BTreeMap;
use ink_storage::StorageValue;

#[ink_lang::storage_item]
struct NonAtomic {
    a: StorageValue<u128>,
}

#[ink_lang::storage_item]
struct Contract {
    a: BTreeMap<u128, NonAtomic>,
}

fn main() {}
